fix: Adjust Spring Configurations - MEED-7576 - Meeds-io/MIPs#154 (#95)